[package]
name = "libpcapng-rs"
version = "0.1.0"
edition = "2021"
authors = ["Bob R <nop@jumpesp.com>"]
repository = "https://github.com/jumpespllc/libpcapng-rs"
license = "MIT"
description = "Rust wrapper for libpcapng library"
keywords = ["libpcapng", "pcap", "pcapng"]
categories = ["api-bindings"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpcapng-sys = {path="libpcapng-sys"}
libc = "0.2.153"
thiserror = "1.0.57"

[workspace]
members = ["libpcapng-sys"]

[features]
static = ["libpcapng-sys/static"]